[tool.poetry]
name = "df-tlv"
version = "0.1.0"
description = ""
authors = ["zachvalenta <zjv5002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
textual = "^2.1.2"
polars = "^1.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
